# certainaity

./: .env.example  .gitignore  CHANGELOG.md  README.md  docker-compose.override.yml  docker-compose.yml  mkdocs.yml  nixpacks.toml  pyproject.toml  railway.toml  vercel.json
.github/workflows/: ci.yml  docs.yml  publish.yml
.vercel/: project.json
docker/: .dockerignore  Dockerfile.api  Dockerfile.frontend  Dockerfile.worker
docs/: CNAME  index.md
docs/architecture/: models.md  overview.md  pipeline.md
docs/guides/: contributing.md  deployment.md  getting-started.md  kubernetes.md
docs/reference/: api.md  cli.md  configuration.md
documents/: api_design.md  architecture.md  data_pipeline.md  deployment.md  model_training.md  testing_strategy.md  timeline.md
frontend/: .env.example  index.html  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: AnalysisProgress.tsx  HeatmapOverlay.tsx  (+3 more)
k8s/: api.yaml  configmap.yaml  frontend.yaml  hpa.yaml  namespace.yaml  pvc.yaml  worker.yaml
monitoring/prometheus/: prometheus.yml
nginx/: certainaity.conf  forenscope.conf
plans/: forenscope_plan.md
scripts/: benchmark.py  download_weights.py  evaluate.py  generate_keys.py  modal_train.py  optimize_ensemble.py  train_inpainting.py  train_mantranet.py  train_patchforensic.py  train_spsl.py
src/certainaity/: __init__.py  cli.py  config.py  exceptions.py  ingest.py  losses.py  report.py  resilience.py
src/forenscope/: __init__.py  cli.py  config.py  exceptions.py  ingest.py  losses.py  report.py  resilience.py
tests/integration/: conftest.py  test_api.py  test_e2e.py  test_metrics.py  test_rate_limit.py  test_report.py  test_worker.py
tests/unit/: conftest.py  test_auth.py  test_cfa.py  test_cli.py  test_config.py  test_dataset.py  test_dct.py  test_ela.py  test_ensemble.py  test_exceptions.py  test_features_pipeline.py  test_ingest.py  test_models.py  test_noise.py  test_report.py  test_resilience.py  test_schemas.py
(+49 files in other folders)
