[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "forenscope"
version = "1.0.0"
description = "Forensic image manipulation detection system"
requires-python = ">=3.11"
dependencies = [
    "Pillow>=10.2",
    "numpy>=1.26",
    "scipy>=1.12",
    "PyWavelets>=1.5",
    "scikit-image>=0.22",
    "piexif>=1.1.3",
    "structlog>=24.1",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "python-multipart>=0.0.9",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "python-jose[cryptography]>=3.3",
    "cryptography>=42.0",
    "redis>=5.0",
    "reportlab>=4.1",
    "celery[redis]>=5.3",
    "structlog>=24.1",
]
worker = [
    "celery[redis]>=5.3",
    "torch>=2.2",
    "torchvision>=0.17",
    "timm>=0.9",
    "transformers>=4.38",
    "faiss-cpu>=1.8",
    "albumentations>=1.4",
]
train = [
    "torch>=2.2",
    "torchvision>=0.17",
    "timm>=0.9",
    "transformers>=4.38",
    "diffusers>=0.26",
    "accelerate>=0.27",
    "albumentations>=1.4",
    "mlflow>=2.10",
    "faiss-cpu>=1.8",
    "scipy>=1.12",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "httpx>=0.27",
    "ruff>=0.3",
    "mypy>=1.8",
    "types-Pillow",
    "types-redis",
]

[project.scripts]
forenscope = "forenscope.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/forenscope"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--tb=short"

[tool.coverage.run]
source = ["forenscope"]
branch = true

[tool.coverage.report]
fail_under = 85
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
